--- a/index.html
+++ b/index.html
@@ -1,202 +1,155 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>RJ Papad Loyalty Register</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", sans-serif;
-      background: #fff8dc;
-      color: #333;
-      text-align: center;
-    }
-    header {
-      padding: 20px;
-    }
-    .logo {
-      width: 100%;
-      max-width: 500px;
-      border-radius: 12px;
-    }
-    .lang-btns {
-      margin-top: 10px;
-    }
-    .lang-btns button {
-      margin: 5px;
-      padding: 8px 14px;
-      border: none;
-      border-radius: 8px;
-      background: #ffb300;
-      color: white;
-      font-weight: bold;
-    }
-    .card {
-      background: white;
-      margin: 20px auto;
-      max-width: 400px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      background: #ffb300;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-    }
-    #dashboard {
-      display: none;
-    }
-    .banner {
-      margin: 10px auto;
-      padding: 10px;
-      background: #fff3cd;
-      border-radius: 10px;
-      max-width: 420px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RJ Papad Registration</title>
+<style>
+body {
+  margin:0;
+  font-family: "Poppins", sans-serif;
+  background:#fff8dc;
+  text-align:center;
+}
+
+/* Hidden sections control */
+#logoPage, #mainPage { display:none; }
+
+.card {
+  background:white;
+  max-width:400px;
+  margin:40px auto;
+  padding:20px;
+  border-radius:12px;
+  box-shadow:0 3px 10px rgba(0,0,0,0.1);
+}
+input {
+  width:100%;
+  padding:10px;
+  margin:10px 0;
+  border:1px solid #ccc;
+  border-radius:8px;
+}
+button {
+  background:#ffb300;
+  border:none;
+  color:white;
+  padding:10px 16px;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+  width:100%;
+}
+#logoPage {
+  background:#fff;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+}
+.logo {
+  max-width:500px;
+  width:90%;
+  border-radius:12px;
+  box-shadow:0 2px 10px rgba(0,0,0,0.1);
+}
+.banner {
+  background:#fff3cd;
+  border-radius:8px;
+  margin:10px;
+  padding:10px;
+  font-weight:bold;
+}
+</style>
 </head>
 <body>
 
-  <header>
-    <img class="logo" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Papad Logo">
-    <div class="lang-btns">
-      <button onclick="setLang('hi')">हिंदी</button>
-      <button onclick="setLang('en')">English</button>
-      <button onclick="setLang('gu')">ગુજરાતી</button>
-    </div>
-  </header>
+<!-- Registration Form -->
+<div id="registerPage" class="card">
+  <h2>रजिस्टर करें (Mobile Number से)</h2>
+  <input type="text" id="userName" placeholder="नाम (वैकल्पिक)">
+  <input type="text" id="userMobile" placeholder="मोबाइल नंबर (अनिवार्य)">
+  <button onclick="registerUser()">रजिस्टर करें</button>
+  <p id="regMsg" style="color:green;font-weight:bold;"></p>
+</div>
 
-  <main>
-    <div id="register" class="card">
-      <h2 id="formTitle">रजिस्टर करें (Mobile Number से)</h2>
-      <input type="text" id="name" placeholder="नाम (वैकल्पिक)">
-      <input type="text" id="mobile" placeholder="मोबाइल नंबर (अनिवार्य)">
-      <button onclick="registerUser()" id="regBtn">रजिस्टर करें</button>
-      <p id="msg"></p>
-      <button id="loginBtn" style="display:none;background:#888;" onclick="loginUser()">Already registered? Login</button>
-    </div>
+<!-- Logo Page -->
+<div id="logoPage">
+  <img class="logo" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Papad Logo">
+  <button onclick="goToMain()">अगला पेज ➜</button>
+</div>
 
-    <div id="dashboard" class="card">
-      <h2 id="walletTitle">लॉयल्टी वॉलेट</h2>
-      <p id="userMobile"></p>
-      <p>Points: <span id="points">0</span></p>
-      <button onclick="addPoints()">+ Add 10 Points</button>
-      <button style="background:#999;" onclick="logout()">Logout</button>
-    </div>
-
-    <div class="banner" id="banner1">Top Banner</div>
-    <div class="banner" id="banner2">Bottom Banner</div>
-  </main>
+<!-- Main Content -->
+<div id="mainPage">
+  <div class="banner" id="banner1">Top Banner (हिंदी)</div>
+  <div class="banner" id="banner2">Bottom Banner (हिंदी)</div>
+  <p style="margin-top:20px;">Welcome to RJ Papad Loyalty Program!</p>
+</div>
 
 <script>
-const SHEET_WEBHOOK_URL = "YOUR_SCRIPT_URL_HERE"; // <-- अपना Google Script URL यहाँ डालें
-const SHEET_SECRET = "rj_secret_2025_xyz"; // <-- वही secret जो Apps Script में रखा है
+/* CONFIGURATION: Replace below with your actual Google Script URL */
+const SHEET_WEBHOOK_URL = "YOUR_SCRIPT_URL_HERE";
+const SHEET_SECRET = "rj_secret_2025_xyz";
 
-const texts = {
-  hi: {
-    formTitle:"रजिस्टर करें (Mobile Number से)",
-    regBtn:"रजिस्टर करें",
-    walletTitle:"लॉयल्टी वॉलेट",
-    top:"ऊपरी बैनर (हिंदी)",
-    bottom:"निचला बैनर (हिंदी)"
-  },
-  en:{
-    formTitle:"Register (with Mobile)",
-    regBtn:"Register",
-    walletTitle:"Loyalty Wallet",
-    top:"Top Banner (English)",
-    bottom:"Bottom Banner (English)"
-  },
-  gu:{
-    formTitle:"રજીસ્ટર કરો (Mobile Number થી)",
-    regBtn:"રજીસ્ટર કરો",
-    walletTitle:"લોયલ્ટી વોલેટ",
-    top:"ઉપરનો બેનર (ગુજરાતી)",
-    bottom:"નીચલો બેનર (ગુજરાતી)"
-  }
-};
-let lang="hi";
-
-function setLang(l){
-  lang=l;
-  const t=texts[l];
-  document.getElementById("formTitle").textContent=t.formTitle;
-  document.getElementById("regBtn").textContent=t.regBtn;
-  document.getElementById("walletTitle").textContent=t.walletTitle;
-  document.getElementById("banner1").textContent=t.top;
-  document.getElementById("banner2").textContent=t.bottom;
-}
-
-function saveToSheet(action,mobile,name,points){
-  fetch(SHEET_WEBHOOK_URL,{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      secret:SHEET_SECRET,
-      action, user_mobile:mobile, user_name:name, language:lang, points
-    })
-  }).catch(e=>console.log(e));
-}
-
+/* Step 1: Registration Flow */
 function registerUser(){
-  const n=document.getElementById("name").value.trim();
-  const m=document.getElementById("mobile").value.trim();
-  if(!m){alert("मोबाइल नंबर दर्ज करें");return;}
-  localStorage.setItem("rj_user",m);
-  localStorage.setItem("rj_name",n);
-  localStorage.setItem("rj_points","0");
-  saveToSheet("register",m,n,0);
-  document.getElementById("msg").textContent="✅ रजिस्ट्रेशन सफल!";
-  document.getElementById("loginBtn").style.display="block";
-}
-
-function loginUser(){
-  const m=localStorage.getItem("rj_user");
-  if(!m){alert("पहले रजिस्टर करें");return;}
-  document.getElementById("register").style.display="none";
-  document.getElementById("dashboard").style.display="block";
-  document.getElementById("userMobile").textContent="Mobile: "+m;
-  document.getElementById("points").textContent=localStorage.getItem("rj_points")||0;
-}
-
-function addPoints(){
-  let p=parseInt(localStorage.getItem("rj_points")||"0")+10;
-  localStorage.setItem("rj_points",p);
-  document.getElementById("points").textContent=p;
-  saveToSheet("add_points",localStorage.getItem("rj_user"),localStorage.getItem("rj_name"),p);
-}
-
-function logout(){
-  localStorage.removeItem("rj_user");
-  localStorage.removeItem("rj_name");
-  localStorage.removeItem("rj_points");
-  document.getElementById("dashboard").style.display="none";
-  document.getElementById("register").style.display="block";
-  document.getElementById("msg").textContent="";
-  document.getElementById("loginBtn").style.display="none";
-}
-
-window.onload=function(){
-  const regd=localStorage.getItem("rj_user");
-  if(regd){
-    document.getElementById("loginBtn").style.display="block";
+  const name=document.getElementById("userName").value.trim();
+  const mobile=document.getElementById("userMobile").value.trim();
+  if(!mobile){
+    alert("कृपया मोबाइल नंबर दर्ज करें!");
+    return;
   }
-  setLang("hi");
+
+  // Auto save locally
+  localStorage.setItem("rj_name",name);
+  localStorage.setItem("rj_mobile",mobile);
+
+  // Send to Google Sheet (background)
+  saveToGoogleSheet("register",mobile,name);
+
+  // Show logo page
+  document.getElementById("registerPage").style.display="none";
+  document.getElementById("logoPage").style.display="flex";
+  document.getElementById("regMsg").textContent="";
+}
+
+/* Step 2: After logo button */
+function goToMain(){
+  document.getElementById("logoPage").style.display="none";
+  document.getElementById("mainPage").style.display="block";
+}
+
+/* Step 3: Auto-load saved user */
+window.onload=function(){
+  const mob=localStorage.getItem("rj_mobile");
+  if(mob){
+    // if already registered, go to logo page directly
+    document.getElementById("registerPage").style.display="none";
+    document.getElementById("logoPage").style.display="flex";
+  } else {
+    // show register form
+    document.getElementById("registerPage").style.display="block";
+  }
+}
+
+/* Google Sheet POST */
+async function saveToGoogleSheet(action,mobile,name){
+  if(!SHEET_WEBHOOK_URL.includes("http")){
+    console.log("⚠️ No webhook set");
+    return;
+  }
+  try{
+    const res=await fetch(SHEET_WEBHOOK_URL,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({
+        secret:SHEET_SECRET,
+        action, user_mobile:mobile, user_name:name, language:"Hindi"
+      })
+    });
+    console.log("Saved:",await res.text());
+  }catch(e){console.log(e);}
 }
 </script>
 </body>
